# dagster_report_automation

./: .gitignore  README.md  dagster.yaml  modes.py  pipelines.py  pyproject.toml  repo.py  resources.py  workspace.yaml
solids/: data_asset.py  email_report.py  excel_report.py
