[tool.poetry]
name = "automating_reportins_using_dagster"
version = "0.1.0"
description = ""
authors = ["Danny Beachnau <DannyBeachnau@Gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.9"
dagit = "*"
dagster = "*"
exchangelib = "*"
openpyxl = "*"
pandas = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
